Fix cart z-index

--- a/src/App.css
+++ b/src/App.css
@@ -116,4 +116,5 @@ table {
 	position: fixed;
 	top: 0;
 	right: 0;
+	z-index: 1;
 }
