--- a/src/FreeShipping.css
+++ b/src/FreeShipping.css
@@ -1,6 +1,6 @@
 .free-shipping {
   position: absolute;
-  top: 0;
+  /* top: 0; */
   right: 0;
   color: #fff;
   background-color: #0c0b10;
