--- a/src/Product.css
+++ b/src/Product.css
@@ -13,7 +13,7 @@
   display: grid;
   justify-items: center;
   border: 0.5px solid transparent;
-
+  z-index: 0;
 }
 .product-card:hover {
   border: 0.5px solid #ccc;
